# halflife_determination

./: LICENCE.md  LICENSE.md  README.md  pyproject.toml
src/half-life_determination/: __main__.py  visualization.py
src/halflife_determination/: __init__.py  __main__.py  hl_elaboration.py  visualization.py
